# sirkula-backend

./: Cargo.toml  README.md
.sqlx/: query-0ab0b7d7355de1e9b8b92966be8882cb6be5dfaded3324c81ead92468e390b49.json  query-1ad1dde4c6888a6cc18cbeeb39852425e27d50320330ef7ad2b16e5b3910730f.json  query-30651ccc881d71b08b78f9725f7c64044e432dbca3cbc3855569a9039f7686c9.json  query-a0bc77f74d5708ae29268dc80a79763981026f29ea34c4e3999cb8a96f0aaf0e.json  query-f63ab2e53fe79c722a0fe2264bca7af48b3cb7de2d209ebd267b31f7ad24300a.json
schema-gen/: Cargo.toml
schema-gen/src/: main.rs
src/: lib.rs  main.rs  sqlite_init.rs
src/api/: mod.rs  model.rs  route.rs
src/database/: insert.rs  mod.rs  model.rs
