[package]
name = "sagara-backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[[bin]]
name = "backend"
path = "src/main.rs"

[[bin]]
name = "initdb"
path = "src/sqlite_init.rs"

[dependencies]
axum = "0.8.4"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["sqlite", "macros", "runtime-tokio-rustls"] }
tokio = { version = "1.46.1", features = ["full"] }
