[workspace]
members = ["schema-gen"]

[package]
name = "sirkula-backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["sqlite", "macros", "runtime-tokio-rustls"] }
tokio = { version = "1.46.1", features = ["full"] }
