[workspace]
members = ["schema-gen"]

[package]
name = "sirkula-backend"
version = "0.1.0"
edition = "2024"
default-run = "backend"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
argon2 = { version = "0.5.3", features = ["simple", "std", "zeroize"] }
axum = { version = "0.8.4", features = ["macros"] }
chrono = "0.4.41"
dotenvy = "0.15.7"
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
sqlx = { version = "0.8.6", features = ["sqlite", "macros", "runtime-tokio-rustls"] }
tokio = { version = "1.46.1", features = ["full"] }
